# cli

./: AGENTS.md  Cargo.toml  README  README.md
docs/: command-surface.md
