[package]
name = "radroots-cli"
version = "0.1.0"
edition = "2024"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version = "1.92.0"
license = "AGPL-3.0"
description = "Command-line interface for Radroots"

[[bin]]
name = "radroots"
path = "src/main.rs"

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
radroots-identity = { path = "../../../../foundation/libs/rs/radroots/crates/identity" }
radroots-log = { path = "../../../../foundation/libs/rs/radroots/crates/log" }
radroots-nostr-accounts = { path = "../../../../foundation/libs/rs/radroots/crates/nostr-accounts" }
radroots-nostr-signer = { path = "../../../../foundation/libs/rs/radroots/crates/nostr-signer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.17"
