[package]
name = "radroots-cli"
version = "0.1.0"
edition = "2024"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version = "1.92.0"
license = "AGPL-3.0"
description = "Command-line interface for Radroots"

[[bin]]
name = "radroots"
path = "src/main.rs"

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
radroots-core = { path = "../../../../foundation/libs/rs/radroots/crates/core", features = ["std", "serde"] }
radroots-events = { path = "../../../../foundation/libs/rs/radroots/crates/events" }
radroots-events-codec = { path = "../../../../foundation/libs/rs/radroots/crates/events-codec", features = ["serde_json"] }
radroots-identity = { path = "../../../../foundation/libs/rs/radroots/crates/identity" }
radroots-log = { path = "../../../../foundation/libs/rs/radroots/crates/log" }
radroots-nostr-accounts = { path = "../../../../foundation/libs/rs/radroots/crates/nostr-accounts" }
radroots-nostr-signer = { path = "../../../../foundation/libs/rs/radroots/crates/nostr-signer" }
radroots-replica-db = { path = "../../../../foundation/libs/rs/radroots/crates/replica-db" }
radroots-replica-sync = { path = "../../../../foundation/libs/rs/radroots/crates/replica-sync" }
radroots-sql-core = { path = "../../../../foundation/libs/rs/radroots/crates/sql-core", features = ["native"] }
radroots-trade = { path = "../../../../foundation/libs/rs/radroots/crates/trade" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.17"
