[package]
name = "radroots_cli"
version = "0.1.0"
edition = "2024"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version = "1.92.0"
license = "AGPL-3.0"
description = "Command-line interface for Radroots"

[[bin]]
name = "radroots"
path = "src/main.rs"

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
radroots_core = { path = "../../../../foundation/libs/rs/radroots/crates/core", features = ["std", "serde"] }
radroots_events = { path = "../../../../foundation/libs/rs/radroots/crates/events" }
radroots_events_codec = { path = "../../../../foundation/libs/rs/radroots/crates/events_codec", features = ["serde_json"] }
radroots_identity = { path = "../../../../foundation/libs/rs/radroots/crates/identity" }
radroots_log = { path = "../../../../foundation/libs/rs/radroots/crates/log" }
radroots_nostr_accounts = { path = "../../../../foundation/libs/rs/radroots/crates/nostr_accounts", features = ["os-keyring"] }
radroots_nostr_signer = { path = "../../../../foundation/libs/rs/radroots/crates/nostr_signer" }
radroots_protected_store = { path = "../../../../foundation/libs/rs/radroots/crates/protected_store", features = ["std"] }
radroots_replica_db = { path = "../../../../foundation/libs/rs/radroots/crates/replica_db" }
radroots_replica_sync = { path = "../../../../foundation/libs/rs/radroots/crates/replica_sync" }
radroots_runtime_distribution = { path = "../../../../foundation/libs/rs/radroots/crates/runtime_distribution" }
radroots_runtime_manager = { path = "../../../../foundation/libs/rs/radroots/crates/runtime_manager" }
radroots_runtime_paths = { path = "../../../../foundation/libs/rs/radroots/crates/runtime_paths" }
radroots_secret_vault = { path = "../../../../foundation/libs/rs/radroots/crates/secret_vault", features = ["std", "os-keyring"] }
radroots_sql_core = { path = "../../../../foundation/libs/rs/radroots/crates/sql_core", features = ["native"] }
radroots_trade = { path = "../../../../foundation/libs/rs/radroots/crates/trade" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
url = "2.5"
zeroize = "1.8"

[dev-dependencies]
assert_cmd = "2.0"
flate2 = "1"
tar = "0.4"
tempfile = "3.17"
